WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309330
Command SwiftGeneratePch failed with a nonzero exit code
https://bugs.webkit.org/show_bug.cgi?id=309330
Summary
Command SwiftGeneratePch failed with a nonzero exit code
Jonathan Bedard
Reported
2026-03-05 21:10:19 PST
NSTextTable.h may be imported from UIKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-03-05 21:10:20 PST
<
rdar://problem/171870586
>
Jonathan Bedard
Comment 2
2026-03-05 21:11:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60043
EWS
Comment 3
2026-03-05 21:16:32 PST
Committed
308776@main
(a40f95586b68): <
https://commits.webkit.org/308776@main
> Reviewed commits have been landed. Closing PR #60043 and removing active labels.
Jonathan Bedard
Comment 4
2026-03-06 07:10:28 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/60063
EWS
Comment 5
2026-03-06 07:12:57 PST
Committed
308795@main
(60e20167cc17): <
https://commits.webkit.org/308795@main
> Reviewed commits have been landed. Closing PR #60063 and removing active labels.
Jonathan Bedard
Comment 6
2026-03-06 09:04:32 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/60067
EWS
Comment 7
2026-03-06 09:07:17 PST
Committed
308800@main
(2a94cd974ae0): <
https://commits.webkit.org/308800@main
> Reviewed commits have been landed. Closing PR #60067 and removing active labels.
Jonathan Bedard
Comment 8
2026-03-06 10:28:49 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/60074
EWS
Comment 9
2026-03-06 12:56:14 PST
Committed
308818@main
(cf6b022dd028): <
https://commits.webkit.org/308818@main
> Reviewed commits have been landed. Closing PR #60074 and removing active labels.
Jonathan Bedard
Comment 10
2026-03-06 15:04:15 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/60095
EWS
Comment 11
2026-03-06 15:10:17 PST
Committed
308824@main
(84e3b4135551): <
https://commits.webkit.org/308824@main
> Reviewed commits have been landed. Closing PR #60095 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug