Command SwiftGeneratePch failed with a nonzero exit code https://bugs.webkit.org/show_bug.cgi?id=309330 rdar://171870586

Unreviewed build fix.

* Tools/TestRunnerShared/spi/UIKitSPIForTesting.h:

Canonical link: https://commits.webkit.org/308776@main